@startuml

title __ENDPOINTS's Class Diagram__\n

  namespace  {
    namespace ev.valhala.slam {
      namespace endpoints {
        class dev.valhala.slam.endpoints.DevicesApiEndPoint {
            + registryDevice()
            - getAllDevices()
            - toggleStateDevice()
        }
      }
    }
  }
  

  namespace  {
    namespace ev.valhala.slam {
      namespace endpoints {
        class dev.valhala.slam.endpoints.MeasuresApiEndPoint {
            + getMonthlyConsuption()
            + registryMensure()
        }
      }
    }
  }
  

  dev.valhala.slam.endpoints.DevicesApiEndPoint o-- dev.valhala.slam.repositories.DevicesRepository : devicesRepository
  dev.valhala.slam.endpoints.MeasuresApiEndPoint o-- dev.valhala.slam.repositories.DevicesRepository : devicesRepository
  dev.valhala.slam.endpoints.MeasuresApiEndPoint o-- dev.valhala.slam.repositories.MeasureRepository : measureRepository


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
